improvedStyles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font: 3vh verdana;
}

html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

.background {
    background: url("introBG.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-position: right;
}

.aboutMe {
    display: flex;
    /*border: solid 1px #ffffff;*/
    justify-content: center;
    color: #ffffff;
    background-color: transparent;
    height: 190vh;
    padding: 10vh 8vw 0;
    margin-top: -100vh;
}

.animContainer {
    height: 100vh;
    /*/border: solid 1px #ff0000;*/
    position: sticky;
    top: 0;
    display: flex;
    z-index: 1000;
}

.animRight {
    margin-top: -100vh;
    justify-content: flex-end;
}

.animLeft {
    margin-top: -100vh;
}

.move {
    position: absolute;
    min-height: 100%;
}

.treelineLeft {
}

.treelineRight {
}

.treelineLeftFast {
}

.meContainer {
    /*border: solid 1px #000000;*/
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 1px 1px;
    z-index: 1000;
    position: fixed;
}

.pfp {
    text-align: center;
    /*border: solid 1px #ffffff;*/
    width: 50vh;
    height: 50vh;
}

.headerText {
    /*border: solid 1px #ffffff;*/
    font-size: 8vh;
}

.subText {
    /*border: solid 1px #ffffff;*/
    font-size: 4vh;
    color: #808080;
}

.introContainer {
    margin-top: 162vh;
    /*border: solid 1px #000000;*/
    color: #ffffff;
    padding: 1px 1px;
    display: flex;
    flex-direction: column;
    z-index: 1000;
}

.introButtons {
    display: flex;
    /*border: solid 1px #ffffff;*/
}

.dropup {
}

    .dropup:hover .dropdown-menu{
        display: inline-block;
    }

.dropText {
    color: #ffffff;
    padding: 0 2vw;
    opacity: 0.5;
    border-radius: 10px;
    /*border: solid 1px #ffffff;*/
}

    .dropText:hover {
        background: #808080;
        opacity: 1;
    }

.dropdown-menu {
    background: #202020;
    opacity: 0.5;
    padding: 1vmin 1vmin;
    border-radius: 10px;
}

    .dropdown-menu:hover {
        opacity: 1;
    }

.btnIntro {
    display: flex;
    align-items: center;
    border-radius: 12px;
    height: 8vh;
    background: #202020;
    padding: 0 2vh;
    border: none;
    color: #ffffff;
    margin-bottom: 1vh;
}

    .btnIntro:hover {
        background: #ffffff;
        color: #202020;
        text-decoration: none;
    }

.introInfo {
    /*border: solid 1px #ffffff;*/
}

.headerContainer {
    margin-top: -100vh;
    position: sticky;
    top: 0;
    display: flex;
    justify-content: center;
    color: #ffffff;
    background: transparent;
    opacity: 0.8;
    padding: 2vh 8vw;
    height: 10vh;
    z-index: 1001;
}

.header {
    /*border: solid 1px #000000;*/
    display: flex;
    width: 100%;
    justify-content: space-between;
    padding: 1px 1px;
}

.btn {
    display: flex;
    background: transparent;
    align-items: center;
    padding: 0 2vh;
    border: none;
    color: #ffffff;
}

    .btn:hover {
        color: #245F4D;
    }

.home {
    /*border: 1px solid #ffffff;*/
    display: flex;
}

.rightOfContainer {
    display: flex;
    justify-content: space-between;
}

.projects {
    /*border: 1px solid #ffffff;*/
    display: flex;
}

.resume {
    /*border: 1px solid #ffffff;*/
    margin-left: 8vw;
    display: flex;
}

.otherStuff {
    /*background-color: #0e0303;
    opacity: 0.8;*/
    box-shadow: 0 -8px 8px #13191A;
    margin-top: 100vh;
    background: url("introInvertBG.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-position: right;
    height: 100vh;
    flex-direction: column;
    /*border: solid 1px #ffffff;*/
    align-items: center;
    justify-content: center;
    display: flex;
    padding: 3vh 8vw;
}

.resumeContainer {
    display: flex;
    margin: 1px 1px;
    /*border: 1px solid #000000;*/
    justify-content: center;
    color: #ffffff;
    z-index: 1000;
}

.carouselSect {
    /*background: linear-gradient(to bottom, #245F4D, #56734F);*/
    box-shadow: 0 -8px 8px #13191A;
    height: 150vh;
    /*border: solid 1px #ffffff;*/
    align-items: center;
    display: flex;
    flex-direction: column; 
    padding: 3vh 8vw;
}

.projectContainer {
    /*border: solid 1px #000000;*/
    color: #ffffff;
    padding: 1px 1px;
    display: flex;
    flex-wrap: wrap;
    height: 70%;
    width: 100%;
    justify-content: space-around;
}

.project {
    border: 1px solid #ffffff;
    width: 70vh;
    height: 45vh;
    z-index: 1000;
}

.credits {
    background: transparent;
    color: #ffffff;
    font-size: 2vh;
    padding: 1vh 8vw;
}

